# bidnamic-data-challenge

./: aggregate_data.py  docker-compose.yaml  ingest_data.py  pyproject.toml  readme.md
