[tool.poetry]
name = "bidnamic-data-challenge"
version = "0.1.0"
description = ""
authors = ["filipgeppert <filip.geppert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
